--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,23 +1,15 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<div class="text-center">
+  <h1>Salon</h1>
 </div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+<div class="jumbotron">
+  <p class="lead">
+    <img src="images/logo-footer.png" alt="I'm Yeoman"><br>
   </p>
-
-  <h4>Angular</h4>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
+  <span class="glyphicon glyphicon-star-empty"></span>
   <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
+    <a class="btn btn-lg btn-success" ng-href="#">Splendid!</a>
   </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
 </div>
