improving maiin navigation - adding logout - adding salon - adding table controller - using spetial font

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -1,6 +1,15 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+@import "./custom-bootstrap.scss";
+@import "./app.scss";
+@import "./header.scss";
+@import "./transitions.scss";
+@import "./salon.scss";
+@import "./table.scss";
+
+// fonts:
+@import "./fonts/great-vives.scss";
 // endbower
 
 .browsehappy {
