--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,15 +1,17 @@
 <div class="text-center">
-  <h1>Salon</h1>
+  <h1 class="pretty-font">
+    Hotel Libertador
+    <span class="glyphicon glyphicon-star-empty"></span>
+    <span class="glyphicon glyphicon-star-empty"></span>
+    <span class="glyphicon glyphicon-star-empty"></span>
+    <span class="glyphicon glyphicon-star-empty"></span>
+  </h1>
 </div>
 <div class="jumbotron">
   <p class="lead">
-    <img src="images/logo-footer.png" alt="I'm Yeoman"><br>
+    <img src="images/logo-footer.png" alt="Libertador Hotel"><br>
   </p>
-  <span class="glyphicon glyphicon-star-empty"></span>
-  <span class="glyphicon glyphicon-star-empty"></span>
-  <span class="glyphicon glyphicon-star-empty"></span>
-  <span class="glyphicon glyphicon-star-empty"></span>
-  <p>
-    <a class="btn btn-lg btn-success" ng-href="#">Splendid!</a>
+    <p>
+    <a class="btn btn-lg btn-success" ng-href="#salon">Comenzar!</a>
   </p>
 </div>
