--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -1,10 +1,10 @@
 <section class="login">
   <div class="container">
     <div class="row">
-    <div class="col-md-10 col-md-offset-1">
+      <div class="col-md-9 col-md-offset-1">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Login:</h3>
+            <h3 class="panel-title">Login</h3>
           </div>
             <div class="panel-body">
               <form accept-charset="UTF-8" role="form">
