--- a/client/app/views/table.html
+++ b/client/app/views/table.html
@@ -1,3 +1,6 @@
 <section class="talbe">
   <h1 class="pretty-font">Mesa {{tableNber}}</h1>
+
+  <consumption prods="prods"></consumption>
+  <product-list></product-list>
 </section>
