--- a/client/app/views/directives/productList.html
+++ b/client/app/views/directives/productList.html
@@ -22,7 +22,7 @@
 
   <!-- products list -->
   <ul class="list-group clearfix">
-    <li class="product list-group-item" ng-repeat="(index, prod) in prods">
+    <li class="product list-group-item" ng-repeat="(index, prod) in prods" ng-animate="'animate'">
       <div class="media">
         <span class="media-left col-md-3" href="#">
           <img src="images/logo-footer.png" alt="...">
