--- a/client/app/views/paycheck.html
+++ b/client/app/views/paycheck.html
@@ -1,5 +1,5 @@
 <section class="table">
-  <h1 class="pretty-font text-center">Mesa {{tableNber}}</h1>
+  <h1 class="pretty-font text-center">Mesa {{tableNber}} - Pagos</h1>
 
   <div class="panel panel-default clearfix">
     <div class="panel-heading">
@@ -7,8 +7,8 @@
     </div>
     <div class="panel-body clearfix">
 
-      <consumption class="col-md-6 col-sm-6" table-consums="tableConsums"></consumption>
-      <product-list class="col-md-6 col-sm-6" table-consums="tableConsums"></product-list>
+      <pay-list class="col-md-6 col-sm-6" table-consums="tableConsums"></pay-list>
+      <client-box class="col-md-6 col-sm-6" table-consums="tableConsums"></client-box>
 
       <div class="total-panel panel panel-default">
         <h1 class="panel-body">
