--- a/client/app/styles/_custom-bootstrap.scss
+++ b/client/app/styles/_custom-bootstrap.scss
@@ -9,3 +9,7 @@ $brand-primary: #6C1628;
     border-color: darken($brand-primary, 8%);
   }
 }
+
+.panel-primary > .panel-heading {
+  background-color: $brand-primary !important;
+}
