--- a/client/app/styles/_header.scss
+++ b/client/app/styles/_header.scss
@@ -1,4 +1,21 @@
-.header-logo {
+.header {
   width: 100%;
-  background-image: url("../../images/top-bkg.jpg");
+
+  .header-logo {
+    // width: 100%;
+    // min-height: 100px;
+    float: left;
+  }
+  .header-bkg {
+    width: 100%;
+    height: 19%;
+    min-height: 40px;
+    background-image: url("../../images/top-bkg.jpg");
+    display: inline-block;
+  }
+
+  .nav.nav-pills {
+    // position: relative;
+    // bottom: 70px;
+  }
 }
