--- a/client/app/styles/_salon.scss
+++ b/client/app/styles/_salon.scss
@@ -15,6 +15,9 @@
         border-radius: 50%;
         background-color: #DDA05C;
       }
+      p {
+        font-size: 30px;
+      }
     }
   }
 
