--- a/client/app/views/directives/consumption.html
+++ b/client/app/views/directives/consumption.html
@@ -7,8 +7,9 @@
       </div>
       <div class="col-md-4">
         <div class="prize"><span class="badge">{{prod.prize | currency : symbol : fractionSize}}</span></div>
-        <div class="count badge">X {{prod.count ? prod.count : 1}}</div>
+        <div class="count label label-info">X {{prod.count ? prod.count : 1}}</div>
         <span class="remove glyphicon glyphicon-remove-circle pull-right" ng-click="remove(index)"></span>
+        <span class="discount glyphicon glyphicon-minus pull-right" ng-click="discount(index)"></span>
       </div>
     </li>
   </ul>
