client box improvements

--- a/client/app/styles/_salon.scss
+++ b/client/app/styles/_salon.scss
@@ -6,6 +6,11 @@
   .thumbnail {
     background-color: #FDF6DA;
 
+    img {
+      width: 80%;
+      margin: 5% 10%;
+    }
+
     .caption {
       .badge {
         position: absolute;
