--- a/client/app/views/directives/productList.html
+++ b/client/app/views/directives/productList.html
@@ -27,7 +27,7 @@
         <span class="media-left col-md-3" href="#">
           <img src="images/logo-footer.png" alt="...">
         </span>
-        <span class="add pull-right col-md-1 add-prod glyphicon glyphicon-ok-circle pull-right" ng-click="add(index)"></span>
+        <span class="add pull-right col-md-1 add-prod glyphicon glyphicon-plus-sign pull-right" ng-click="add(index)"></span>
         <div class="media-body pull-right col-md-7">
           <h4 class="media-heading">{{prod.name}}</h4>
           <span class="description">{{prod.description}}</span>
