--- a/client/app/views/directives/paylist.html
+++ b/client/app/views/directives/paylist.html
@@ -14,7 +14,7 @@
       <div class="col-md-4">
         <div class="prize"><span class="badge">{{prod.prize | currency : symbol : fractionSize}}</span></div>
         <!-- <div class="count label label-info">X {{prod.count ? prod.count : 1}}</div> -->
-        <!-- <span class="remove glyphicon glyphicon-play pull-right" ng-click="move(index)"></span> -->
+        <span class="remove glyphicon glyphicon-move pull-right" ng-click="move(index)"></span>
       </div>
     </li>
   </ul>
