fixing header styles

--- a/client/app/styles/_header.scss
+++ b/client/app/styles/_header.scss
@@ -5,6 +5,7 @@
     // width: 100%;
     // min-height: 100px;
     float: left;
+    margin-left: 15%;
   }
   .header-bkg {
     width: 100%;
@@ -17,5 +18,7 @@
   .nav.nav-pills {
     // position: relative;
     // bottom: 70px;
+    margin-right: 5%;
+    margin-top: 2%;
   }
 }
