--- a/client/app/views/directives/clientBox.html
+++ b/client/app/views/directives/clientBox.html
@@ -12,7 +12,7 @@
           ui-on-Drop="onDrop($event, $data, box.consums)">
 
           <div class="panel-heading clearfix">
-            <h3 class="panel-title pull-left">Ticket {{box.name}}</h3>
+            <h3 class="panel-title pull-left">Ticket {{index + 1}}</h3>
             <span class="remove glyphicon glyphicon-remove-circle pull-right" ng-click="remove(index)"></span>
           </div>
 
